Deleted script file, added script file and update platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir         = .
+src_dir         = a_master
+lib_dir         =./z_libraries for Arduino IDE
 default_envs    = master
 
 [env]
@@ -20,77 +21,76 @@ upload_speed  = 1500000
 monitor_speed = 115200
 upload_port   = COM3 ;upload port is example. Modify it accordingly to you personal environment
 lib_deps      =
-    MHeironimus/Joystick
-    adafruit/Adafruit ADS1X15@1.1.2
+    MHeironimus/Joystick    
+    adafruit ADS1X15
     adafruit/Adafruit BusIO
     SPI
     keyboard
     HID
     Mouse
-extra_scripts = pre:scripts/pre_source_dir.py
+extra_scripts = pre:scripts/pioino.py
 
 [env:master]
-build_src_filter = -<*> +<a_master/>
 
 [env:ab412_collective_head_a]
-build_src_filter = -<*> +<peripherals/ab412_collective_head/ab412_head_a/>
+build_src_filter = -<*> +<../peripherals/ab412_collective_head/ab412_head_a/>
         
 [env:ab412_collective_head_b]
-build_src_filter = -<*> +<peripherals/ab412_collective_head/ab412_head_b/>
+build_src_filter = -<*> +<../peripherals/ab412_collective_head/ab412_head_b/>
 
 [env:b8_grip]
-build_src_filter = -<*> +<peripherals/b8_grip/>
+build_src_filter = -<*> +<../peripherals/b8_grip/>
 
 [env:b206_collective_head]
-build_src_filter = -<*> +<peripherals/b206_collective_head/>
+build_src_filter = -<*> +<../peripherals/b206_collective_head/>
 
 [env:b407_collective_head]
-build_src_filter = -<*> +<peripherals/b407_collective_head/>
+build_src_filter = -<*> +<../peripherals/b407_collective_head/>
 
 [env:collective_no_throttle]
-build_src_filter = -<*> +<peripherals/collective_no_throttle/>
+build_src_filter = -<*> +<../peripherals/collective_no_throttle/>
 
 [env:collective_simple]
-build_src_filter = -<*> +<peripherals/collective_simple/>
+build_src_filter = -<*> +<../peripherals/collective_simple/>
 
 [env:collective_simple_se_evo_i2c]
-build_src_filter = -<*> +<peripherals/collective_simple_se_evo_i2c/>
+build_src_filter = -<*> +<../peripherals/collective_simple_se_evo_i2c/>
 
 [env:collective_single_throttle]
-build_src_filter = -<*> +<peripherals/collective_single_throttle/>
+build_src_filter = -<*> +<../peripherals/collective_single_throttle/>
 
 [env:collective_single_throttle_evo_i2c]
-build_src_filter = -<*> +<peripherals/collective_single_throttle_evo_i2c/>
+build_src_filter = -<*> +<../peripherals/collective_single_throttle_evo_i2c/>
 
 [env:collective_single_throttle_mk3]
-build_src_filter = -<*> +<peripherals/collective_single_throttle_mk3/>
+build_src_filter = -<*> +<../peripherals/collective_single_throttle_mk3/>
 
 [env:collective_twin_throttle]
-build_src_filter = -<*> +<peripherals/collective_twin_throttle/>
+build_src_filter = -<*> +<../peripherals/collective_twin_throttle/>
 
 [env:collective_twin_throttle_mk3]
-build_src_filter = -<*> +<peripherals/collective_twin_throttle_mk3/>
+build_src_filter = -<*> +<../peripherals/collective_twin_throttle_mk3/>
 
 [env:compact_collective_head]
-build_src_filter = -<*> +<peripherals/compact_collective_head/>
+build_src_filter = -<*> +<../peripherals/compact_collective_head/>
 
 [env:huey_collective_head]
-build_src_filter = -<*> +<peripherals/huey_collective_head/>
+build_src_filter = -<*> +<../peripherals/huey_collective_head/>
 
 [env:simple_pedestal]
-build_src_filter = -<*> +<peripherals/simple_pedestal/>
+build_src_filter = -<*> +<../peripherals/simple_pedestal/>
 
 [env:throttle_quadrant]
-build_src_filter = -<*> +<peripherals/throttle_quadrant/>
+build_src_filter = -<*> +<../peripherals/throttle_quadrant/>
 
 [env:vrmax_head_radio_panel]
-build_src_filter = -<*> +<peripherals/vrmax_collective_head_radio_panel_extension/vrmax_head_radio_panel/>
+build_src_filter = -<*> +<../peripherals/vrmax_collective_head_radio_panel_extension/vrmax_head_radio_panel/>
 
 [env:vrmax_head_side_panel]
-build_src_filter = -<*> +<peripherals/vrmax_collective_head_radio_panel_extension/vrmax_head_side_panel/>
+build_src_filter = -<*> +<../peripherals/vrmax_collective_head_radio_panel_extension/vrmax_head_side_panel/>
 
 [env:vrmaxII_pedestal_a]
-build_src_filter = -<*> +<peripherals/vrmaxII_pedestal/vrmaxII_pedestal_a/>
+build_src_filter = -<*> +<../peripherals/vrmaxII_pedestal/vrmaxII_pedestal_a/>
 
 [env:vrmaxII_pedestal_b]
-build_src_filter = -<*> +<peripherals/vrmaxII_pedestal/vrmaxII_pedestal_b/>
+build_src_filter = -<*> +<../peripherals/vrmaxII_pedestal/vrmaxII_pedestal_b/>
