updated platformio.ini for lib_deps

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,7 @@ lib_deps      =
     MHeironimus/Joystick    
     adafruit ADS1X15
     adafruit/Adafruit BusIO
+    adafruit/Adafruit MCP23017 Arduino Library
     SPI
     keyboard
     HID
