refactor glob to support single file filter

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,9 +35,14 @@ extra_scripts = pre:scripts/pioino.py
 
 [env:ab412_collective_head_a]
 build_src_filter = -<*> +<../peripherals/ab412_collective_head/ab412_head_a/>
+                   +<za_shared_functions_collective.ino>
         
 [env:ab412_collective_head_b]
 build_src_filter = -<*> +<../peripherals/ab412_collective_head/ab412_head_b/>
+
+[env:apache_collective_head]
+build_src_filter = -<*> +<../peripherals/apache_collective_head/>
+lib_deps = adafruit/Adafruit Keypad
 
 [env:b8_grip]
 build_src_filter = -<*> +<../peripherals/b8_grip/>
