Redo lib_deps platformIO.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,6 @@
 
 [platformio]
 src_dir         = a_master
-lib_dir         =./z_libraries for Arduino IDE
 default_envs    = master
 
 [env]
@@ -21,28 +20,26 @@ upload_speed  = 1500000
 monitor_speed = 115200
 upload_port   = COM3 ;upload port is example. Modify it accordingly to you personal environment
 lib_deps      =
-    MHeironimus/Joystick    
-    adafruit ADS1X15
-    adafruit/Adafruit BusIO
-    adafruit/Adafruit MCP23017 Arduino Library
-    SPI
-    keyboard
-    HID
-    Mouse
+    Wire   
 extra_scripts = pre:scripts/pioino.py
 
 [env:master]
+lib_deps =
+    ${env.lib_deps}
+    MHeironimus/Joystick@^2.1.1   
+    SPI@^1.0
+    https://github.com/soligen2010/Adafruit_ADS1X15.git
+    adafruit/Adafruit BusIO@^1.16.0
+    adafruit/Adafruit MCP23017 Arduino Library@^2.3.2
+    arduino-libraries/keyboard@^1.0.6
+    HID@^1.0
+    arduino-libraries/Mouse@^1.0.1
 
 [env:ab412_collective_head_a]
 build_src_filter = -<*> +<../peripherals/ab412_collective_head/ab412_head_a/>
-                   +<za_shared_functions_collective.ino>
-        
+                        
 [env:ab412_collective_head_b]
 build_src_filter = -<*> +<../peripherals/ab412_collective_head/ab412_head_b/>
-
-[env:apache_collective_head]
-build_src_filter = -<*> +<../peripherals/apache_collective_head/>
-lib_deps = adafruit/Adafruit Keypad
 
 [env:b8_grip]
 build_src_filter = -<*> +<../peripherals/b8_grip/>
